Update for January 2017

--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,14 @@
         <main>
             <h1>Ross Evans</h1>
             <h2 id='title'>1B | Honours Computer Science</h2>
-            <section>
-                <h2>Profile</h2>
-                <p>
-                    An enthusiastic computer programmer with a passion for both web and game development. I am big on automation and cleanliness in the development process. I see projects in the long-term, keeping future maintenance and best design patterns in mind.
-                </p>
-                <p>
-                    Currently employed with <a href='https://www.silverorange.com/'>silverorange</a> before beginning a degree in Honours Co-Op Computer Science at the Univeristy of Waterloo.
-                </p>
-                <p>
-                    In my free time I enjoy playing piano, tinkering with Rubik's cubes, and reading a good book.
-                </p>
+            <section id='job'>
+                <h2>Job Experience</h2>
+                <p>Web Developer at <a href='https://www.silverorange.com/'>Silverorange</a> (Feb 2017 - Current)</p>
+                <ul>
+                    <li>Developed React components that are used in an educational website for the IWK health Centre</li>
+                    <li>Created a functional test framework using Selenium and PHP WebDriver</li>
+                    <li>Introduced Continuous Integration with Jenkins: code linting and functional testing</li>
+                </ul>
             </section>
             <div class='separator'></div>
             <section id='mainContainer'>
@@ -26,63 +23,69 @@
                     <h2>Experience with</h2>
                     <ul>
                         <li>PHP</li>
-                        <li>HTML, CSS, JS, and jQuery</li>
+                        <li>React + Redux</li>
                         <li>Python</li>
                         <li>MySQL</li>
-                        <li>Google API</li>
                         <li>Jenkins</li>
                         <li>Selenium WebDriver</li>
                         <li>Git and GitHub</li>
+                        <li>Flask</li>
+                        <li>Google API</li>
                         <li>Sentry</li>
                         <li>Lua</li>
                     </ul>
                     <h2>Contact</h2>
                     <ul>
                         <li><a href='mailto:ross@rossevansgames.com'>ross@rossevansgames.com</li>
-                        <li><a href='http://www.rossevans.fun'>rossevans.fun</a></li>
+                        <li><a href='http://www.rossevansgames.com'>rossevansgames.com</a></li>
                         <li><a href='http://www.github.com/Qcode'>Qcode@GitHub</a></li>
+                        <li><a href='https://www.linkedin.com/in/ross-evans-6a6218156/'>Ross Evans@LinkedIn</a></li>
                         <li id='phoneNumber'>902-213-6011</li>
                     </ul>
                 </section>
                 <section id='mainContent'>
-                    <section id='job'>
-                        <h2>Job Experience</h2>
-                        <p>Web Developer at Silverorange (Feb 2017 - Current)</p>
-                        <ul>
-                            <li>Modernized coding standards</li>
-                            <li>Created a functional test framework with Selenium</li>
-                            <li>Kicked off Continuous Integration with Jenkins: code linting and functional testing</li>
-                        </ul>
-                    </section>
                     <section id='academics'>
                         <h2>Academics</h2>
+                        <p>January 2018 - Overall GPA of 3.900</p>
+                        <p>September 2017 - Invited to Hack the North 2017, developed a web app using Flask and CockroachDB in 36 hours to encourage recylcing</p>
                         <p>July 2017 - Awarded the Governor General's Academic Medal for Colonel Gray Senior High School</p>
                         <p>July 2017 - Received a 42/45 in the IB diploma programme | Highest Aggregate Average in my school | Top 2% worldwide </p>
                         <p>April 2017 - Placed in the top 5% of the Senior Canadian Computing Competition | Recognized in the Honour Roll</p>
-                        <p>July 2017 - Awarded the Parkdale Sherwood Lions Award for strong contribution in community volunteering</p>
-                        <p>July 2017 - Awarded the Purity Dairy Award for a deserving student who through hard work and determination has achieved excellence</p>
+                    </section>
+                    <section id='volunteering'>
+                        <h2>Volunteering</h2>
+                        <p>President of Waterloo Cabaret Club (December 2017 - current)</p>
+                        <ul>
+                            <li>Directed 21 other students to put on a musical</li>
+                            <li>Responsibilities included organizing practice space, booking the theatre for show date, and managing our time</li>
+
+                        </ul>
+                        <p>Mentor at Ladies Learning Code (September 2016 - current)</p>
+                        <ul>
+                            <li>Mentored at every event since the chapter started in PEI</li>
+                            <li>Taught HTML, CSS, Javascript, Wordpress, and Scratch</li>
+                            <li>Ages taught range from 6 to 60</li>
+                        </ul>
+                        <p>Treasurer of local Free the Children charity group (September 2015 - June 2017)</p>
+                        <ul>
+                            <li>Organized fundraising events within the local community</li>
+                            <li>Helped raise $10,000 over 2 years</li>
+                        </ul>
                     </section>
                 </section>
             </section>
             <div class='separator'></div>
-            <section id='volunteering'>
-                <h2>Volunteering</h2>
-                <p>Mentor at Ladies Learning Code (September 2016 - Current)</p>
-                <ul>
-                    <li>Mentored at every event since the chapter started in PEI</li>
-                    <li>Taught HTML, CSS, Javascript, Wordpress, and Scratch</li>
-                    <li>Ages taught range from 6 to 60</li>
-                </ul>
-                <p>Treasurer of local Free the Children charity group (September 2015 - June 2017)</p>
-                <ul>
-                    <li>Organized fundraising events within the local community</li>
-                    <li>Helped raise $10,000 over 2 years</li>
-                </ul>
-                <p>Volunteer at Computer Skills for Seniors Program (March 2016 - November 2016)</p>
-                <ul>
-                    <li>Organized by the Confederation Centre Public Library</li>
-                    <li>Helped two seniors become comfortable with technology</li>
-                </ul>
+            <section id='profile'>
+                <h2>Profile</h2>
+                 <p>
+                    An enthusiastic computer programmer with a passion for both web and game development. I see projects in the long-term, keeping future maintenance and best design patterns in mind.
+                </p>
+                <p>
+                    Currently developing part-time with <a href='https://www.silverorange.com/'>silverorange</a> while studying for a degree in Honours Computer Science at the Univeristy of Waterloo.
+                </p>
+                <p>
+                    In my free time I enjoy playing piano, tinkering with Rubik's cubes, and reading a good book.
+                </p>
             </section>
         </main>
     </body>
